fix z-index on current date

--- a/src/app/home-page/home-page.scss
+++ b/src/app/home-page/home-page.scss
@@ -201,7 +201,7 @@
                 font-size: 14px;
                 font-weight: 500;
                 padding: 2px 8px;
-                z-index: 1000;
+                z-index: 999;
             }
 
             .time-scale-cell-data {
